--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage ('Compile Stage'){
             steps {
-                withMaven(Maven : 'Maven 3.6.3'){
+                withMaven(maven : 'Maven 3.6.3'){
                     sh 'mvn clean compile'
                 }            
                 
@@ -12,14 +12,14 @@ pipeline {
         }
         stage ('Testing Stage'){
             steps {
-                withMaven(Maven : 'Maven 3.6.3'){
+                withMaven(maven : 'Maven 3.6.3'){
                     sh 'mvn test'
                 }
             }
         }
         stage ('Deployement Stage'){
             steps {
-                withMaven(Maven : 'Maven 3.6.3'){
+                withMaven(maven : 'Maven 3.6.3'){
                     sh 'mvn deploy'
                 }
             }
